# be/src/main/java/com/v2p/swp391/application/model/MessageEntity.java
@@ -1,0 +1,32 @@
+package com.v2p.swp391.application.model;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Entity
+@Table(name = "messages")
+public class MessageEntity extends BaseEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @ManyToOne
+    @JoinColumn(name = "sender_id")
+    private UserEntity sender;
+
+    @ManyToOne
+    @JoinColumn(name = "receiver_id")
+    private UserEntity receiver;
+
+    @ManyToOne
+    @JoinColumn(name = "room_id")
+    private RoomEntity room;
+
+    private String content;
+
+}
