# fe/swagger.json
@@ -848,6 +848,159 @@
                 }
             }
         },
+        "/api/v1/rooms": {
+            "get": {
+                "tags": [
+                    "room-controller"
+                ],
+                "operationId": "getRoomsByUserId",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 0
+                        }
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PagedResponseRoomDto"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/rooms/{id}": {
+            "get": {
+                "tags": [
+                    "room-controller"
+                ],
+                "operationId": "getMessages",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/MessageDto"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/payment/weekly-revenue": {
+            "get": {
+                "tags": [
+                    "payment-controller"
+                ],
+                "operationId": "getWeeklyRevenue",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "number",
+                                        "format": "double"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/payment/today": {
+            "get": {
+                "tags": [
+                    "payment-controller"
+                ],
+                "operationId": "getTodayDashboard",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/payment/monthly-revenue": {
+            "get": {
+                "tags": [
+                    "payment-controller"
+                ],
+                "operationId": "getMonthlyRevenue",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "number",
+                                        "format": "double"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/lessons/watched/{userId}": {
             "get": {
                 "tags": [
@@ -1016,7 +1169,8 @@
                         "enum": [
                             "ADMIN",
                             "MANAGER",
-                            "CUSTOMER"
+                            "CUSTOMER",
+                            "PROFESSIONAL"
                         ]
                     },
                     "isActive": {
@@ -1048,7 +1202,8 @@
                         "enum": [
                             "ADMIN",
                             "MANAGER",
-                            "CUSTOMER"
+                            "CUSTOMER",
+                            "PROFESSIONAL"
                         ]
                     },
                     "isActive": {
@@ -1293,7 +1448,8 @@
                         "enum": [
                             "ADMIN",
                             "MANAGER",
-                            "CUSTOMER"
+                            "CUSTOMER",
+                            "PROFESSIONAL"
                         ]
                     }
                 }
@@ -1301,6 +1457,10 @@
             "PaymentRequest": {
                 "type": "object",
                 "properties": {
+                    "userId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
                     "productName": {
                         "type": "string"
                     },
@@ -1315,6 +1475,9 @@
                         "format": "int32"
                     },
                     "cancelUrl": {
+                        "type": "string"
+                    },
+                    "packages": {
                         "type": "string"
                     }
                 }
@@ -1447,47 +1610,51 @@
                     }
                 }
             },
-            "LessonCategoryEntity": {
+            "PagedResponseRoomDto": {
                 "type": "object",
                 "properties": {
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time"
+                    "content": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/RoomDto"
+                        }
                     },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time"
+                    "page": {
+                        "type": "integer",
+                        "format": "int32"
                     },
+                    "size": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "totalElements": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "totalPages": {
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                }
+            },
+            "RoomDto": {
+                "type": "object",
+                "properties": {
                     "id": {
                         "type": "integer",
                         "format": "int64"
                     },
-                    "name": {
-                        "type": "string"
-                    },
-                    "parent": {
-                        "$ref": "#/components/schemas/LessonCategoryEntity"
-                    },
-                    "children": {
-                        "uniqueItems": true,
+                    "users": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/LessonCategoryEntity"
+                            "$ref": "#/components/schemas/UserDto"
                         }
                     }
                 }
             },
-            "LessonEntity": {
+            "UserDto": {
                 "type": "object",
                 "properties": {
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "updatedAt": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
                     "id": {
                         "type": "integer",
                         "format": "int64"
@@ -1495,24 +1662,40 @@
                     "name": {
                         "type": "string"
                     },
-                    "duration": {
+                    "role": {
+                        "type": "string",
+                        "enum": [
+                            "ADMIN",
+                            "MANAGER",
+                            "CUSTOMER",
+                            "PROFESSIONAL"
+                        ]
+                    }
+                }
+            },
+            "MessageDto": {
+                "type": "object",
+                "properties": {
+                    "id": {
                         "type": "integer",
-                        "format": "int32"
+                        "format": "int64"
                     },
-                    "description": {
+                    "senderId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "senderName": {
                         "type": "string"
                     },
-                    "imgUrl": {
+                    "receiverId": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "receiverName": {
                         "type": "string"
                     },
-                    "videoUrl": {
+                    "content": {
                         "type": "string"
-                    },
-                    "categories": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/LessonCategoryEntity"
-                        }
                     }
                 }
             },
@@ -1570,7 +1753,7 @@
                         "format": "int64"
                     },
                     "lesson": {
-                        "$ref": "#/components/schemas/LessonEntity"
+                        "$ref": "#/components/schemas/LessonDto"
                     },
                     "watchedMillis": {
                         "type": "integer",
